--- a/packages/styles/scss/components/file-uploader/_file-uploader.scss
+++ b/packages/styles/scss/components/file-uploader/_file-uploader.scss
@@ -352,8 +352,7 @@
   }
 
   .#{$prefix}--file__state-container .#{$prefix}--file-complete {
-    // TODO: Should this be $icon-interactive instead?
-    fill: $interactive;
+    fill: $icon-interactive;
     inline-size: $spacing-06;
 
     &:focus {
